Add keypress handling and reset state
Keybindings are introduces. Enter and space change the slides and q to
quit the presentation and enter file mode again.

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -9,15 +9,18 @@
       position: relative;
       height: 80vh;
       margin: 2rem;
+      background: #fff;
     }
     .current-slide {
       top: 2rem;
+      z-index: 10;
     }
     .next-slide {
       // top: 10rem;
+      z-index: 1;
     }
     .next-slide-enter {
-      transform: translateY(0rem);
+      transform: translateY(-70vh);
       opacity: 0;
     }
     .next-slide-enter-active {
