Add Fullscreen feature
Now present in fullscreen using f. press f again to switch back to
normal mode.

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,14 @@
+html,
+body {
+  margin: 0;
+  background: #fff;
+  min-height: 100vh;
+}
+
 .App {
   margin: 2rem;
   font-family: 'Inter', sans-serif;
+  font-size: 20px;
   .presentation {
     // margin-top: 5rem;
     height: 80vh;
