--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 html,
 body {
   margin: 0;
@@ -6,21 +10,64 @@ body {
 }
 
 .App {
-  margin: 2rem;
-  font-family: 'Inter', sans-serif;
-  font-size: 20px;
+  font-family: 'Jost*', sans-serif;
+  font-size: 24px;
+
   .presentation {
-    // margin-top: 5rem;
-    height: 80vh;
+    height: 100vh;
     overflow: hidden;
+    padding: 4rem 10rem;
+
     .slide-content {
       position: relative;
       height: 80vh;
-      margin: 2rem;
       background: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      flex-direction: column;
+
+      p {
+        margin-bottom: 1.25em;
+      }
+
+      h1,
+      h2,
+      h3,
+      h4,
+      h5 {
+        margin: 2.75rem 0 1rem;
+        // font-weight: 400;
+        line-height: 1.15;
+      }
+
+      h1 {
+        margin-top: 0;
+        font-size: 3.052em;
+      }
+
+      h2 {
+        font-size: 2.441em;
+      }
+
+      h3 {
+        font-size: 1.953em;
+      }
+
+      h4 {
+        font-size: 1.563em;
+      }
+
+      h5 {
+        font-size: 1.25em;
+      }
+
+      small,
+      .text_small {
+        font-size: 0.8em;
+      }
     }
     .current-slide {
-      top: 2rem;
       z-index: 10;
     }
     .next-slide {
@@ -37,10 +84,10 @@ body {
       transition: all 1000ms ease-in-out;
     }
     .next-slide-exit {
-      display: none;
+      // display: none;
     }
     .next-slide-exit-active {
-      display: none;
+      // display: none;
     }
 
     .current-slide-enter {
