Add Settings, Partitioner Limit and Design Changes
Settings Component has been created to handle all the changes that can
be done at the start of the presentation. The link between the settings
and the global state has not been made. It is planned to use redux for
settings and file management.

Partitiner now has a configurable function parameter to set the maximum
number of paragraphs that can be clumped together in one slide.

Some tweaks have been made on the sass file, includeing a change to
Aileron for content font.

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,6 @@
 // Theme
 
-$main-font: 'Jost*', sans-serif;
+$main-font: 'Aileron', sans-serif;
 $head-font: 'Jost*', sans-serif;
 
 $primary-color: #f28f79;
@@ -23,9 +23,11 @@ body {
 
 .App {
   font-family: $main-font, sans-serif;
+  font-weight: 300;
   font-size: 24px;
 
   .start {
+    font-family: $head-font;
     padding: 4rem 10rem;
     display: flex;
     flex-direction: column;
@@ -84,7 +86,7 @@ body {
         font-family: $head-font;
         margin: 2.75rem 0 1rem;
         color: #222222;
-        // font-weight: 400;
+        font-weight: 100;
         line-height: 1.15;
       }
 
