--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -12,8 +12,8 @@ html {
 $main-font: 'Inter', sans-serif;
 $head-font: 'Inter', sans-serif;
 
-$primary-color: #f28f79;
-$secondary-color: #656b8c;
+$primary-color: #ff002eff;
+$secondary-color: #2f07ffff;
 
 $primary-color-light: #f2cbbd;
 $secondary-color-light: #a9b5d9;
@@ -45,27 +45,65 @@ body {
     justify-content: center;
     height: 100vh;
     max-width: 1000px;
-    // align-items: center;
+    align-items: center;
 
+    .flex {
+      display: flex;
+
+      .info {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        text-align: left;
+
+        a {
+          color: inherit;
+          text-decoration: none;
+          border-bottom: 2px solid $primary-color;
+        }
+      }
+    }
+
+    #icon {
+      height: 256px;
+      width: 256px;
+    }
     h1 {
       font-size: 5rem;
       margin: 0;
+      margin-bottom: -1rem;
     }
+
     .upload-btn-wrapper {
       position: relative;
       overflow: hidden;
       display: inline-block;
       margin: 1rem 0;
+      cursor: pointer;
       input[type='file'] {
+        cursor: pointer;
         font-size: 100px;
         position: absolute;
         left: 0;
         top: 0;
         opacity: 0;
       }
+      &:hover {
+        .btn {
+          background: linear-gradient(
+            145deg,
+            rgba($primary-color, 1),
+            rgba($secondary-color, 1)
+          );
+        }
+      }
       .btn {
+        background: linear-gradient(
+          145deg,
+          rgba($primary-color, 0.75),
+          rgba($secondary-color, 0.75)
+        );
         color: white;
-        background: $secondary-color;
         border: none;
         padding: 1rem 2rem;
         border-radius: 1rem;
