Add html support, add break on hr

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -34,7 +34,7 @@ body {
 
 .App {
   font-family: $main-font, sans-serif;
-  font-weight: normal;
+  font-weight: 500;
   font-size: 24px;
 
   .start {
